[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-bot"
version = "0.1.0"
description = "Initial read-only and safety scaffolding for a Polymarket bot"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
